--- a/PGS.TemplatePlaceholderBot/PGS.TemplatePlaceholderBot.csproj
+++ b/PGS.TemplatePlaceholderBot/PGS.TemplatePlaceholderBot.csproj
@@ -5,6 +5,21 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
+
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Aspose.Cells" Version="24.6.0" />
+      <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.2" />
+        <!--        SkiaSharp.NativeAssets.Linux.NoDependencies нужен для DocumentFormat.OpenXm для запуска в контейнере-->
+      <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.8" />
+      <PackageReference Include="Telegram.Bot" Version="19.0.0" />
+    </ItemGroup>
 
 </Project>
