fix: fix volumes

--- a/PGS.TemplatePlaceholderBot/PGS.TemplatePlaceholderBot.csproj
+++ b/PGS.TemplatePlaceholderBot/PGS.TemplatePlaceholderBot.csproj
@@ -12,6 +12,10 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+      <None Remove="files\template.docx" />
+      <Content Include="files\template.docx">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
