--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@
 
 services:
   pgs.template-placeholder-bot:
-    image: harlok13/pgs.template-placeholder-bot:latest
+#    image: harlok13/pgs.template-placeholder-bot:latest
     build:
       context: .
       dockerfile: PGS.TemplatePlaceholderBot/Dockerfile
     volumes:
-      - ./data:/app/data:ro
+      - ./PGS.TemplatePlaceholderBot/files:/app/files
     environment:
       - TOKEN=${TOKEN}
       - ENVIRONMENT=Development
