--- a/PGS.TemplatePlaceholderBot/Dockerfile
+++ b/PGS.TemplatePlaceholderBot/Dockerfile
@@ -17,6 +17,6 @@ RUN dotnet publish "PGS.TemplatePlaceholderBot.csproj" -c $BUILD_CONFIGURATION -
 
 FROM base AS final
 WORKDIR /app
-RUN mkdir files
+RUN mkdir files/templates
 COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "PGS.TemplatePlaceholderBot.dll"]
