feat: save commit

--- a/PGS.TemplatePlaceholderBot/PGS.TemplatePlaceholderBot.csproj
+++ b/PGS.TemplatePlaceholderBot/PGS.TemplatePlaceholderBot.csproj
@@ -32,6 +32,7 @@
 
     <ItemGroup>
       <Folder Include="files\templates\" />
+      <Folder Include="minio-data\" />
     </ItemGroup>
 
 </Project>
