--- a/PGS.TemplatePlaceholderBot/PGS.TemplatePlaceholderBot.csproj
+++ b/PGS.TemplatePlaceholderBot/PGS.TemplatePlaceholderBot.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <PackageReference Include="Aspose.Cells" Version="24.6.0" />
+      <PackageReference Include="Aspose.Words" Version="24.7.0" />
       <PackageReference Include="DocumentFormat.OpenXml" Version="3.0.2" />
       <PackageReference Include="DotNetEnv" Version="3.0.0" />
       <PackageReference Include="Serilog" Version="4.0.0" />
@@ -31,8 +32,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="files\templates\" />
       <Folder Include="minio-data\" />
+      <Folder Include="templates\" />
     </ItemGroup>
 
 </Project>
