fix: separate volumes, remove nesting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       dockerfile: PGS.TemplatePlaceholderBot/Dockerfile
     volumes:
       - ./PGS.TemplatePlaceholderBot/files:/app/files
+      - ./PGS.TemplatePlaceholderBot/templates:/app/templates
     environment:
       - ENVIRONMENT=Development
       - TOKEN=${TOKEN}
@@ -17,14 +18,14 @@ services:
     env_file:
       - ./PGS.TemplatePlaceholderBot/.env
         
-  pgs.minio-storage:
-    image: bitnami/minio:2024.2.14
-    container_name: pgs.minio-storage
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    environment:
-      MINIO_ROOT_USER: pgs_minio
-      MINIO_ROOT_PASSWORD: pgs_minio
-    volumes:
-      - ./PGS.TemplatePlaceholderBot/minio-data:/bitnami/minio/data
+#  pgs.minio-storage:
+#    image: bitnami/minio:2024.2.14
+#    container_name: pgs.minio-storage
+#    ports:
+#      - "9000:9000"
+#      - "9001:9001"
+#    environment:
+#      MINIO_ROOT_USER: pgs_minio
+#      MINIO_ROOT_PASSWORD: pgs_minio
+#    volumes:
+#      - ./PGS.TemplatePlaceholderBot/minio-data:/bitnami/minio/data
